--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.levelp.at</groupId>
@@ -14,12 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <checkstyle.version>10.3.3</checkstyle.version>
-        <testng.version>7.6.1</testng.version>
-        <jquery.version>3.6.1</jquery.version>
+        <junit-jupiter.version>5.9.0</junit-jupiter.version>
+        <junit-platform-suite.version>1.9.0</junit-platform-suite.version>
         <assertj-core.version>3.23.1</assertj-core.version>
 
         <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
 
         <suite.base.dir>${project.basedir}/src/test/resources</suite.base.dir>
     </properties>
@@ -31,43 +32,38 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <suite.name>ru/levelp/at/lesson0304/unit/testing/AllTestSuite.xml</suite.name>
+                <suite.name>**/testing/**/*IT.java</suite.name>
             </properties>
         </profile>
 
         <profile>
-            <id>lesson0304-all-test-before-after-suite-suite</id>
+            <id>lesson0304-data-provider-suite</id>
             <properties>
-                <suite.name>ru/levelp/at/lesson0304/unit/testing/AllTestBeforeAfterSuiteSuite.xml</suite.name>
+                <suite.name>**/suites/DataProviderSuite.java</suite.name>
             </properties>
         </profile>
 
         <profile>
-            <id>lesson0304-all-test-before-after-test-suite</id>
+            <id>lesson0304-class-suite</id>
             <properties>
-                <suite.name>ru/levelp/at/lesson0304/unit/testing/AllTestBeforeAfterTestSuite.xml</suite.name>
+                <suite.name>**/suites/ClassSuite.java</suite.name>
             </properties>
         </profile>
     </profiles>
 
     <dependencies>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>jquery</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>${jquery.version}</version>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>${junit-platform-suite.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -104,15 +100,15 @@
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!--                <executions>-->
+                <!--                    <execution>-->
+                <!--                        <id>validate</id>-->
+                <!--                        <phase>validate</phase>-->
+                <!--                        <goals>-->
+                <!--                            <goal>check</goal>-->
+                <!--                        </goals>-->
+                <!--                    </execution>-->
+                <!--                </executions>-->
             </plugin>
 
             <!-- Surefire -->
@@ -120,11 +116,34 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+
+            <!-- Failsafe -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-failsafe-plugin.version}</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suite.base.dir}/${suite.name}</suiteXmlFile>
-                    </suiteXmlFiles>
+                    <includes>
+                        <include>${suite.name}</include>
+                    </includes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
