--- a/pom.xml
+++ b/pom.xml
@@ -14,61 +14,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <checkstyle.version>10.3.3</checkstyle.version>
-        <testng.version>7.6.1</testng.version>
-        <jquery.version>3.6.1</jquery.version>
+        <junit-jupiter.version>5.9.1</junit-jupiter.version>
         <assertj-core.version>3.23.1</assertj-core.version>
         <selenium-java.version>4.4.0</selenium-java.version>
+        <webdrivermanager.version>5.3.0</webdrivermanager.version>
 
         <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
-
-        <suite.base.dir>${project.basedir}/src/test/resources</suite.base.dir>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>lesson0304-all-test-suite</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <suite.name>ru/levelp/at/lesson0304/unit/testing/AllTestSuite.xml</suite.name>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>lesson0304-all-test-before-after-suite-suite</id>
-            <properties>
-                <suite.name>ru/levelp/at/lesson0304/unit/testing/AllTestBeforeAfterSuiteSuite.xml</suite.name>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>lesson0304-all-test-before-after-test-suite</id>
-            <properties>
-                <suite.name>ru/levelp/at/lesson0304/unit/testing/AllTestBeforeAfterTestSuite.xml</suite.name>
-            </properties>
-        </profile>
-    </profiles>
 
     <dependencies>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>jquery</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>${jquery.version}</version>
         </dependency>
 
         <dependency>
@@ -82,6 +42,12 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager.version}</version>
         </dependency>
     </dependencies>
 
@@ -126,11 +92,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suite.base.dir}/${suite.name}</suiteXmlFile>
-                    </suiteXmlFiles>
-                </configuration>
             </plugin>
         </plugins>
     </build>
