--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <assertj-core.version>3.23.1</assertj-core.version>
         <selenium-java.version>4.4.0</selenium-java.version>
         <webdrivermanager.version>5.3.0</webdrivermanager.version>
+        <javafaker.version>1.0.2</javafaker.version>
 
         <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
@@ -49,6 +50,13 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
