--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <selenium-java.version>4.4.0</selenium-java.version>
         <webdrivermanager.version>5.3.0</webdrivermanager.version>
         <javafaker.version>1.0.2</javafaker.version>
+        <rest-assured.version>5.2.0</rest-assured.version>
 
         <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
@@ -55,6 +56,12 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>${javafaker.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
         </dependency>
 
     </dependencies>
