--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
         <webdrivermanager.version>5.3.0</webdrivermanager.version>
         <javafaker.version>1.0.2</javafaker.version>
         <rest-assured.version>5.2.0</rest-assured.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <json-path.version>2.7.0</json-path.version>
+        <lombok.version>1.18.24</lombok.version>
 
         <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
@@ -62,6 +65,25 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
