--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,11 @@ build:
 
 release:
     image: markhobson/maven-chrome:jdk-11
+    variables:
+        HEADLESS: "true"
     stage: deploy
     script:
+        - printenv
         - mvn clean test -P lesson-1011-cicd-selenium
     allow_failure: true
     artifacts:
@@ -76,6 +79,8 @@ allure_report:
             - target/site
     dependencies:
         - release
+    rules:
+        -   if: $CI_COMMIT_BRANCH == 'master'
 #    needs:
 #        - release
 #    only:
