--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ release:
     allow_failure: true
     artifacts:
         paths:
-            - target/allure-result
+            - target/allure-results
         when: always
     rules:
         -   if: $CI_COMMIT_BRANCH == 'master'
